can submit answer to poll and see results

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
       <h3 class="text-muted">Polling Fun</h3>
     </div>
 
-    <poll-component></poll-component>
+    <router-outlet></router-outlet>
 
     <footer class="footer">
       <p>&copy; 2017 Kelly Liu</p>
