--- a/frontend/src/app/poll.component.html
+++ b/frontend/src/app/poll.component.html
@@ -17,6 +17,6 @@
 <p><a 
   (click)="onSubmit()"
   class="btn btn-lg btn-success" 
-  href="index.html#" role="button">Submit</a>
+  role="button">Submit</a>
 </p>
 </div>
